lib_mockup: Make the library independent from the shell
We create a folder `lib_p2p_services` to store RPC related to the
`p2p` layer.

Therefore the `p2p_directory.ml` file is moved to `lib_p2p`.

As a consequence, the `tewos-mockup` library only depends on
the `tezos-p2p` library.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1029,6 +1029,11 @@ opam:tezos-p2p:
   variables:
     package: tezos-p2p
 
+opam:tezos-p2p-services:
+  <<: *opam_definition
+  variables:
+    package: tezos-p2p-services
+
 opam:tezos-protocol-000-Ps9mPmXa:
   <<: *opam_definition
   variables:
