--- a/src/lib_client_commands/dune
+++ b/src/lib_client_commands/dune
@@ -7,6 +7,7 @@
             tezos-rpc
             tezos-p2p
             tezos-shell-services
+            tezos-p2p-services
             tezos-stdlib-unix
             tezos-signer-backends
             data-encoding)
@@ -16,6 +17,7 @@
                    -open Tezos_clic_unix
                    -open Tezos_client_base
                    -open Tezos_shell_services
+                   -open Tezos_p2p_services
                    -open Data_encoding)))
 
 (alias
