--- a/src/lib_p2p/dune
+++ b/src/lib_p2p/dune
@@ -5,10 +5,12 @@
             lwt-canceler
             tezos-base
             tezos-stdlib
-            tezos-stdlib-unix)
+            tezos-stdlib-unix
+	    tezos-p2p-services)
  (flags (:standard -open Tezos_base__TzPervasives
                    -open Tezos_stdlib_unix
-                   -open Tezos_stdlib)))
+                   -open Tezos_stdlib
+		   -open Tezos_p2p_services)))
 
 (alias
  (name runtest_lint)
