--- a/src/lib_crypto/dune
+++ b/src/lib_crypto/dune
@@ -12,7 +12,7 @@
             lwt
             blake2
             hacl
-            secp256k1
+            secp256k1-internal
             uecc
             zarith))
 
