Shell/env: split file tezos_protocol_environment

--- a/src/lib_protocol_environment/dune
+++ b/src/lib_protocol_environment/dune
@@ -8,6 +8,10 @@
                    -open Tezos_micheline))
  (wrapped false)
  (modules Tezos_protocol_environment
+          Environment_V1
+          Environment_context
+          Environment_protocol_T
+          Environment_protocol_T_V1
           Dummy_context
           Memory_context))
 
