--- a/src/lib_rpc/tezos-rpc.opam
+++ b/src/lib_rpc/tezos-rpc.opam
@@ -10,8 +10,8 @@ depends: [
   "dune" { >= "1.11" }
   "tezos-error-monad"
   "data-encoding" { = "0.2" }
-  "ocplib-resto"
-  "ocplib-resto-directory"
+  "resto" { = "0.4" }
+  "resto-directory" { = "0.4" }
 ]
 build: [
   ["dune" "build" "-p" name "-j" jobs]
