--- a/src/lib_rpc_http/tezos-rpc-http-client.opam
+++ b/src/lib_rpc_http/tezos-rpc-http-client.opam
@@ -9,7 +9,7 @@ depends: [
   "dune" { >= "1.11" }
   "tezos-base"
   "tezos-rpc-http"
-  "ocplib-resto-cohttp-client"
+  "resto-cohttp-client" { = "0.4" }
 ]
 build: [
   ["dune" "build" "-p" name "-j" jobs]
