--- a/src/lib_rpc_http/tezos-rpc-http.opam
+++ b/src/lib_rpc_http/tezos-rpc-http.opam
@@ -9,8 +9,8 @@ depends: [
   "tezos-tooling" { with-test }
   "dune" { >= "1.11" }
   "tezos-base"
-  "ocplib-resto-directory"
-  "ocplib-resto-cohttp"
+  "resto-directory" { = "0.4" }
+  "resto-cohttp" { = "0.4" }
 ]
 build: [
   ["dune" "build" "-p" name "-j" jobs]
