Stdlib,Base: Introduce Data_encoding_wrapper in base, move Socket module into base

--- a/src/bin_signer/dune
+++ b/src/bin_signer/dune
@@ -3,6 +3,7 @@
  (public_names tezos-signer)
  (package tezos-signer)
  (libraries tezos-base
+            tezos-base.unix
             tezos-client-base
             tezos-client-base-unix
             tezos-client-commands
