Tests/python: test for prototol migration and test chain
This test is a reworked version of `multibranch/test_voting_full.py`.
. The multibranch test wasn't on the CI and this became deprecated,
. Because babylon and carthage are now present on the master branch,
  doesn't need to rely on other branches.
. it tests the test chain, and the new bootstrap heuristic when
  a test chain is launched

It also enriches the Python client API

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -464,6 +464,12 @@ integration:voting:
     - pytest tests_python/tests/test_voting.py -s --log-dir=tmp
   stage: test
 
+integration:voting_full:
+  <<: *integration_python_definition
+  script:
+    - pytest tests_python/tests/test_voting_full.py -s --log-dir=tmp
+  stage: test
+
 integration:examples_forge_transfer:
   <<: *integration_definition
   script:
