--- a/src/lib_storage/tezos-storage.opam
+++ b/src/lib_storage/tezos-storage.opam
@@ -9,7 +9,7 @@ depends: [
   "tezos-tooling" { with-test }
   "dune" { >= "1.11" }
   "tezos-base"
-  "lmdb"
+  "tezos-lmdb"
   "irmin-pack"
   "digestif" {>= "0.7.3"}
   "tezos-shell-services"
