--- a/src/proto_alpha/lib_client_commands/dune
+++ b/src/proto_alpha/lib_client_commands/dune
@@ -6,6 +6,9 @@
             tezos-protocol-alpha
             tezos-protocol-environment
             tezos-shell-services
+            tezos-mockup
+            tezos-mockup-registration
+            tezos-mockup-commands
             tezos-client-base-unix
             tezos-client-alpha
             tezos-client-commands
