--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -424,6 +424,12 @@ integration:p2p:
     - pytest tests_python/tests/test_p2p.py -s --log-dir=tmp
   stage: test
 
+integration:programs:
+  <<: *integration_python_definition
+  script:
+    - pytest tests_python/tests/test_programs.py -s --log-dir=tmp
+  stage: test
+
 integration:proto_demo_counter:
   <<: *integration_python_definition
   script:
