Tests: Migrate from 006-PsCARTHA to (Carthage) alpha (instead of 005-PsBabyM1)
Also allow this (no-op) migration in proto_alpha

--- a/src/bin_sandbox/dune
+++ b/src/bin_sandbox/dune
@@ -55,13 +55,13 @@
          --number-of-b 2
          --with-timestamp
          --until 20
-         --protocol-hash PsBabyM1eUXZseaJdmXFApDSBqj8YBfwELoxZHHW77EMcAbbwAS
-         --protocol-kind Babylon
+         --protocol-hash PsCARTHAGazKbHtnKfLzQg3kms52kSRpgnDY982a9oYsSXRLQEb
+         --protocol-kind Carthage
          --tezos-client %{bin:tezos-client}
          --tezos-node %{bin:tezos-node}
-         --tezos-baker %{bin:tezos-baker-005-PsBabyM1}
-         --tezos-endorser %{bin:tezos-endorser-005-PsBabyM1}
-         --tezos-accuser %{bin:tezos-accuser-005-PsBabyM1}
+         --tezos-baker %{bin:tezos-baker-006-PsCARTHA}
+         --tezos-endorser %{bin:tezos-endorser-006-PsCARTHA}
+         --tezos-accuser %{bin:tezos-accuser-006-PsCARTHA}
          --hard-fork 10:ProtoALphaALphaALphaALphaALphaALphaALphaALphaDdp3zK
          --hard-fork-baker %{bin:tezos-baker-alpha}
          --hard-fork-endorser %{bin:tezos-endorser-alpha}
@@ -84,14 +84,14 @@
          --time-betw 3
          --blocks-per-vot 14
          --with-timestamp
-         --protocol-hash PsBabyM1eUXZseaJdmXFApDSBqj8YBfwELoxZHHW77EMcAbbwAS
-         --protocol-kind Babylon
+         --protocol-hash PsCARTHAGazKbHtnKfLzQg3kms52kSRpgnDY982a9oYsSXRLQEb
+         --protocol-kind Carthage
          --tezos-client %{bin:tezos-client}
          --tezos-admin %{bin:tezos-admin-client}
          --tezos-node %{bin:tezos-node}
-         --first-baker %{bin:tezos-baker-005-PsBabyM1}
-         --first-endorser %{bin:tezos-endorser-005-PsBabyM1}
-         --first-accuser %{bin:tezos-accuser-005-PsBabyM1}
+         --first-baker %{bin:tezos-baker-006-PsCARTHA}
+         --first-endorser %{bin:tezos-endorser-006-PsCARTHA}
+         --first-accuser %{bin:tezos-accuser-006-PsCARTHA}
          --second-baker %{bin:tezos-baker-alpha}
          --second-endorser %{bin:tezos-endorser-alpha}
          --second-accuser %{bin:tezos-accuser-alpha}
