Coverage: update to bisect_ppx 2.3 and improve instrumentation script
Update to bisect_ppx version 2 to fully support OCaml 4.08 syntax

Use --bisect-file (https://github.com/aantron/bisect_ppx/pull/303, merged in bisect_ppx 2.3) which allows getting rid of `BISECT_FILE` variable and the `coverage-setup` Makefile rule.
Improve the instrumentation script to
- avoid overwriting symlinks
- find dune files recursively (now just use `scripts/instrument_dune_bisect.sh . to` instrument everything) with `--except` exceptions
- `--remove` to remove the directive from files

--- a/.dockerignore
+++ b/.dockerignore
@@ -31,7 +31,7 @@ docs/api/rpc.rst
 docs/api/p2p.rst
 
 src/bin_client/test/LOG.*
-_coverage_output
+_coverage_output/*.coverage
 _coverage_report
 
 **/*.install
