--- a/.gitignore
+++ b/.gitignore
@@ -39,7 +39,7 @@ __pycache__
 /docs/api/p2p.rst
 
 /src/bin_client/test/LOG.*
-/_coverage_output
+/_coverage_output/*.coverage
 /_coverage_report
 
 *.install
