--- a/src/proto_001_PtCJ7pwo/lib_client/dune
+++ b/src/proto_001_PtCJ7pwo/lib_client/dune
@@ -6,8 +6,7 @@
             tezos-shell-services
             tezos-client-base-unix
             tezos-rpc
-            tezos-signer-backends
-            bip39)
+            tezos-signer-backends)
  (library_flags (:standard -linkall))
  (flags (:standard -w -9+27-30-32-40@8
                    -open Tezos_base__TzPervasives
