--- a/src/proto_alpha/lib_protocol/tezos-protocol-alpha-tests.opam
+++ b/src/proto_alpha/lib_protocol/tezos-protocol-alpha-tests.opam
@@ -14,9 +14,9 @@ depends: [
   "tezos-alpha-test-helpers" { with-test }
   "tezos-stdlib-unix" { with-test }
   "tezos-protocol-environment" { with-test }
+  "tezos-client-base" { with-test }
   "tezos-protocol-alpha-parameters" { with-test }
   "tezos-shell-services" { with-test }
-  "bip39" { with-test }
 ]
 build: [
   [
