--- a/src/lib_signer_backends/dune
+++ b/src/lib_signer_backends/dune
@@ -7,8 +7,7 @@
             tezos-rpc-http-client
             tezos-signer-services
             tezos-shell-services
-            pbkdf
-            bip39)
+            pbkdf)
  (flags (:standard -open Tezos_base__TzPervasives
                    -open Tezos_stdlib
                    -open Tezos_client_base
