--- a/src/proto_006_PsCARTHA/lib_protocol/tezos-protocol-006-PsCARTHA-tests.opam
+++ b/src/proto_006_PsCARTHA/lib_protocol/tezos-protocol-006-PsCARTHA-tests.opam
@@ -15,8 +15,8 @@ depends: [
   "tezos-stdlib-unix" { with-test }
   "tezos-protocol-environment" { with-test }
   "tezos-protocol-006-PsCARTHA-parameters" { with-test }
+  "tezos-client-base" { with-test }
   "tezos-shell-services" { with-test }
-  "bip39" { with-test }
 ]
 build: [
   [
