--- a/src/lib_client_base/dune
+++ b/src/lib_client_base/dune
@@ -3,8 +3,7 @@
  (public_name tezos-client-base)
  (libraries tezos-base
             tezos-shell-services
-            tezos-rpc
-	    pbkdf)
+            tezos-rpc)
  (modules (:standard bip39_english))
  (library_flags (:standard -linkall))
  (flags (:standard -open Tezos_base__TzPervasives
