--- a/src/lib_signer_backends/dune
+++ b/src/lib_signer_backends/dune
@@ -6,8 +6,7 @@
             tezos-client-base
             tezos-rpc-http-client
             tezos-signer-services
-            tezos-shell-services
-            pbkdf)
+            tezos-shell-services)
  (flags (:standard -open Tezos_base__TzPervasives
                    -open Tezos_stdlib
                    -open Tezos_client_base
