--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -557,7 +557,12 @@ integration:examples_test_example:
 coq:lint:
   <<: *test_definition
   script:
-    - coq-of-ocaml --help
+    - make
+    - cd src/proto_alpha/lib_protocol
+    - for source in *.{ml,mli} ; do
+        coq-of-ocaml -config coq-of-ocaml/config.json $source ;
+      done
+  allow_failure: true
   retry: 0
 
 ############################################################
